# clikb

./: KanbanApp.py  KanbanBoardRenderer.py  KanbanDirectoryStore.py  KanbanItemEditor.py  KanbanStore.py  Makefile  setup.cfg
kanban_plugins/: due.py  main.py  status_change.py  tag_icons.py  testplugin.py
src/clikb/: BaseKanbanPlugin.py  KanbanApp.py  cli.py  kanban_board_renderer.py  kanban_directory_store.py
src/clikb/builtin_plugins/: main.py
test/: test_kanban_store.py
test/data/test_store1/: 00000.kbi  00002.kbi
test/data/test_store2/: 00000.kbi  00001.kbi
tests/: test_kanban_app.py  test_kanban_store.py
tests/data/test_plugin_dir/: testplugin.py
tests/data/test_store1/: board.kbb
