[metadata]
name = clikb
version = 0.0.1
author = Tim Hemel
author_email = tim@securesoftware.nl
description = CLI Kanban
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/timhemel/clikb
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: OS Independent
keywords =
	kanban cli

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	PyYAML
	Click
	wcwidth
tests_require =
	pytest

[options.packages.find]
where = src

[options.package_data]
clikb = builtin_plugins

[options.entry_points]
console_scripts =
	clikb=clikb.cli:app

